--- a/app/views/pesans/_pesans.html.erb
+++ b/app/views/pesans/_pesans.html.erb
@@ -1,13 +1,13 @@
 <div>
   <% unless pesan.room.is_private %>
-    <h6 class="name flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"> <%= pesan.user.username %> </h6>
+    <h6 class="name"> <%= pesan.user.username %> </h6>
   <% end %>
   <%= pesan.content %>
 </div>
 <div class="cont-<%= pesan.user.id %>">
   <div class="message-box msg-<%= pesan.user.id %> " >
     <% unless pesan.room.is_private %>
-      <h6 class="name flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"> <%= pesan.user.username %> </h6>
+      <h6 class="name"> <%= pesan.user.username %> </h6>
     <% end %>
   <%= pesan.content %>
   </div>
