--- a/app/views/komponen/_signout.html.erb
+++ b/app/views/komponen/_signout.html.erb
@@ -1,5 +1,3 @@
 <div class="flex items-center justify-center">
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-        <%= link_to 'Sign Out', signout_path,  :method => :delete %>
-    </button>
+    <%= button_to 'Sign Out', signout_path, method: :delete, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
 </div>
