--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,1 +1,7 @@
 <div> <%= link_to room.name, room %> </div>
+<li class="clearfix">
+<!--    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">-->
+    <div class="about">
+      <%= link_to room.name, room, :class => 'name' %>
+    </div>
+</li>
