--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,6 +2,6 @@
 <li class="clearfix">
 <!--    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">-->
     <div class="about">
-    <%= link_to user.username, user, :class => 'name' %>
+    <%= link_to user.username, user_path(user.id), :class => 'name' %>
     </div>
 </li>
